tests/ui/transmute/raw-ptr-non-null.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/raw-ptr-non-null.rs:7:23
   |
LL |     unsafe { matches!(core::mem::transmute::<*const T, Option<NonNull<T>>>(ptr), None) }
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `*const T` (pointer to `T`)
   = note: target type: `Option<NonNull<T>>` (size can vary because of <T as Pointee>::Metadata)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0512`.
